# eliza

./: .bealers  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  .gitmodules  .gitpod.yml  .package.json.swp  .prettierignore  .windsurfrules  404.html  AGENT.md  AGENTS.md  API_MIGRATION_GUIDE.md  API_VALIDATION_REPORT.md  CHANGELOG.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DISABLE-UI-PR-DESCRIPTION.md  Dockerfile  Dockerfile.docs  Eliza.json  KNAP_WORKFLOW_FIX_SUMMARY.md  LICENSE  LORE.md  NOTES.md  README.md  README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FARSI.md  README_FR.md  README_GR.md  README_HE.md  README_HU.md  README_IT.md  (+125 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/: pull_request_template.md
.husky/: pre-commit
.turbo/: config.json
agent/: jest.config.js  package.json  tsconfig.json
api/: index.html
blog/: 20250210_update.html  add-plugins.html  archive.html  atom.xml  authors.html  autodocs.html  autofun-intro.html  autofun-tokenomics.html  feed.json  helloworld.html  index.html  macos-dev-setup-guide.html  mission.html  openai-plugin-envs.html  plugin-ordering-guide.html  reintroduction.html  roadmap.html  rss.xml  tags.html  taming-info.html  taming_info.html  v1-v2.html  wdygdtw-recap.html  wdygdtw_recap.html
characters/: shaw.json  (+13 more)
scripts/bug_hunt/: biome.json  main.py  package.json  pyproject.toml
scripts/bug_hunt/config/: analysis.config.json
scripts/bug_hunt/types/: index.ts
scripts/bug_hunt/utils/: agent.py  checkpoint_manager.py  node_manager.py  reporting.py
(+17412 files in other folders)
